# relayer

./: .dockerignore  .editorconfig  Cargo.toml  LICENSE  README.md  README.zh_simp.md  README.zh_trad.md  rustfmt.toml  shell.nix
.cargo/: config
containers/ubuntu/: Dockerfile
core/collation/: Cargo.toml
core/collation/src/: collation.rs  error.rs  lib.rs  request_converter.rs
core/contract_abi/: Cargo.toml
core/contract_abi/src/: lib.rs
core/contract_abi/src/abi_decoder/: mod.rs
core/contract_abi/src/abi_decoder/dispatcher/: fst_dispatcher.rs
core/contract_abi/src/abi_decoder/token/: erc1376.rs  erc20.rs  mod.rs
core/contract_abi/src/abi_encoder/: mod.rs
core/contract_abi/src/abi_encoder/dispatcher/: fst_dispatcher.rs  mod.rs
core/contract_abi/src/abi_encoder/token/: erc1376.rs  erc20.rs  mod.rs
core/contract_abi/src/interfaces/: mod.rs
core/contract_abi/src/interfaces/dispatcher/: fst_dispatcher.rs  mod.rs
core/contract_abi/src/interfaces/token/: erc20.rs
core/ethereum/: Cargo.toml
core/ethereum/src/: lib.rs
core/ethereum/src/client/: client.rs  error.rs
core/ethereum/src/monitor/: mod.rs  poller.rs  service.rs
core/ethereum/src/service/: client_group.rs  service.rs
core/machine/: Cargo.toml
core/machine/src/: error.rs  event.rs  lib.rs  machine.rs  service.rs  tests.rs  transaction_queue.rs
core/network/: Cargo.toml
core/network/src/: error.rs  lib.rs  service.rs
core/pool/: Cargo.toml
core/pool/src/: error.rs  filter.rs  inner.rs  lib.rs  params.rs  queue.rs  ready.rs  selector.rs  service.rs  status.rs  tests.rs  verifier.rs
core/pricer/: Cargo.toml
core/pricer/src/: lib.rs
core/traits/: Cargo.toml
core/traits/src/: ethereum.rs  lib.rs  machine.rs  pool.rs
core/types/: Cargo.toml
core/types/src/: lib.rs
core/types/src/ethereum_rpc/: bytes.rs  call_request.rs  hash.rs  transaction_receipt.rs  uint.rs
core/types/src/relayer_rpc/: error.rs  mod.rs
core/types/src/request/: error.rs  request.rs
core/types/src/solidity/: mod.rs  token.rs
core/types/src/state/: mod.rs
docker/alpine/: Dockerfile
relayer/src/: main.rs  rpc_apis.rs  run_cmd.rs  server.rs
relayer/src/cli/: error.rs  mod.rs
relayer/src/jsonrpc/: errors.rs  mod.rs  service.rs
relayer/src/jsonrpc/v1/impls/: admin.rs  mod.rs  network.rs  pool.rs  relayer.rs  token.rs
relayer/src/jsonrpc/v1/traits/: admin.rs  pool.rs  relayer.rs  system_info.rs  token.rs
relayer/src/service/: error.rs  exit_reason.rs  mod.rs
relayer/src/service/config/: error.rs  mod.rs
src/: lib.rs  main.rs
src/collation/: collation.rs  error.rs  mod.rs  request_converter.rs
src/contract_abi/: error.rs  mod.rs
src/contract_abi/abi_decoder/: mod.rs
src/contract_abi/abi_decoder/dispatcher/: mod.rs
src/contract_abi/abi_decoder/token/: erc1376.rs  erc20.rs  mod.rs
src/contract_abi/abi_encoder/: mod.rs
src/contract_abi/abi_encoder/dispatcher/: fst_dispatcher.rs  mod.rs
src/contract_abi/abi_encoder/token/: erc1376.rs  erc20.rs  mod.rs
src/contract_abi/interfaces/token/: erc1376.rs  mod.rs
src/ethereum/: mod.rs  types.rs
src/ethereum/client/: client.rs  error.rs  mod.rs
src/ethereum/listener/: contract.rs  error.rs  mod.rs  service.rs
src/ethereum/monitor/: error.rs  mod.rs  poller.rs  service.rs
src/ethereum/service/: client_group.rs  error.rs  mod.rs  service.rs
src/machine/: error.rs  event.rs  machine.rs  mod.rs  service.rs  transaction_queue.rs
src/network/: error.rs  mod.rs  service.rs
src/pool/: error.rs  inner.rs  mod.rs  selector.rs  service.rs  tests.rs  verifier.rs
src/pricer/: mod.rs
src/relayer/: cli.rs  mod.rs
src/relayer/commands/: mod.rs
src/relayer/jsonrpc/: errors.rs  service.rs
src/relayer/jsonrpc/v1/: mod.rs
src/relayer/jsonrpc/v1/impls/: admin.rs  network.rs  pool.rs  relayer.rs  system_info.rs  token.rs
src/relayer/jsonrpc/v1/traits/: mod.rs  network.rs  pool.rs  relayer.rs  token.rs
src/relayer/service/: error.rs  exit.rs  mod.rs
src/relayer/service/config/: error.rs  mod.rs
src/traits/: ethereum.rs  machine.rs  mod.rs  network.rs  pool.rs  pricer.rs
src/types/: mod.rs
src/types/ethereum_rpc/: log.rs  mod.rs  transaction.rs
src/types/relayer_rpc/: error.rs  mod.rs  request.rs  token.rs
src/types/request/: delegate_mode.rs  error.rs  mod.rs  request.rs
src/types/state/: account.rs
src/utils/: mod.rs
