[package]
name = "fst-relayer"
version = "0.1.0"
authors = ["fstnetwork <admin@fstk.io>"]
edition = "2018"

[lib]
crate-type = ["lib", "staticlib", "dylib"]

[[bin]]
name = "fst-relayer"
path = "src/main.rs"

[dependencies]
ethcore = { git = "https://github.com/paritytech/parity-ethereum.git", tag = "v2.5.0", package = "common-types" }
ethkey = { git = "https://github.com/paritytech/parity-ethereum.git", tag = "v2.5.0", package = "ethkey" }
ethstore = { git = "https://github.com/paritytech/parity-ethereum.git", tag = "v2.5.0", package = "ethstore" }

byteorder = "1.2"
bytes = "0.4"
clap = "2.33"
dirs = "1.0"
env_logger = "0.6"
error-chain = "0.12"
ethabi = { git = "https://github.com/AtkinsChang/ethabi.git", branch = "fix_dynamic_type" }
ethereum-types = "0.4"
fdlimit = "0.1.1"
fixed-hash = "0.2"
futures = "0.1"
hex-slice = "0.1"
hyper = "0.12.0"
jsonrpc-core = "10.0"
jsonrpc-http-server = "10.0"
jsonrpc-ipc-server = "10.0"
jsonrpc-macros = "10.0"
jsonrpc-pubsub = "10.0"
jsonrpc-ws-server = "10.0"
keccak-hash = "0.1"
lazy_static = "1.3.0"
log = "0.4"
parking_lot = "0.7"
rlp = "0.3.0"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
smallvec = "0.6.9"
tokio = "0.1.11"
tokio-signal = "0.2"
tokio-timer = "0.2"
toml = "0.5.0"

[dev-dependencies]
rustc-hex = "1.0"
