[package]
name = "collation"
version = "0.1.0"
authors = ["fstnetwork <admin@fstk.io>"]

[dependencies]
types = { path = "../types" }
contract-abi = { path = "../contract_abi" }

ethcore-transaction = { git = "https://github.com/paritytech/parity-ethereum.git" }
ethkey = { git = "https://github.com/paritytech/parity-ethereum.git" }

rustc-hex = "1.0"
ethereum-types = "0.4.0"
error-chain = "0.12.0"
futures = "0.1.25"

