[package]
name = "contract-abi"
version = "0.1.0"
authors = ["fstnetwork <admin@fstk.io>"]

[dependencies]
types = { path = "../types" }

# ethabi = "6.1.0"
ethabi = { git = "https://github.com/AtkinsChang/ethabi", branch = "fix_dynamic_type" }
ethkey = { git = "https://github.com/paritytech/parity-ethereum.git" }

error-chain = "0.12.0"
ethereum-types = "0.4.0"
rustc-hex = "1.0"
lazy_static = "1.2.0"

