[package]
name = "ethereum"
version = "0.1.0"
authors = ["fstnetwork <admin@fstk.io>"]

[dependencies]
collation = { path = "../collation" }
contract-abi = { path = "../contract_abi" }
pool = { path = "../pool" }
traits = { path = "../traits" }
types = { path = "../types" }

ethkey = { git = "https://github.com/paritytech/parity-ethereum.git" }
ethcore-transaction = { git = "https://github.com/paritytech/parity-ethereum.git" }

bytes = "0.4.11"
error-chain = "0.12.0"
ethereum-types = "0.4.0"
futures = "0.1.25"
hex-slice = "0.1.4"
hyper = "0.12.18"
jsonrpc-core = "9.0.0"
keccak-hash = "0.1.2"
log = "0.4.6"
parking_lot = "0.7.0"
rlp = { version = "0.3.0", features = ["ethereum"] }
rustc-hex = "1.0"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
tokio = "0.1.13"
tokio-signal = "0.2.7"
tokio-tcp  = "0.1.2"
tokio-timer = "0.2.8"

