[package]
name = "pool"
version = "0.1.0"
authors = ["fstnetwork <admin@fstk.io>"]

[dependencies]
traits = { path = "../traits" }
types = { path = "../types" }

log = "0.4.6"
error-chain = "0.12.0"
ethereum-types = "0.4.0"
parking_lot = "0.7.0"
futures = "0.1.25"
smallvec = "0.6.7"
tokio-timer = "0.2.8"
lazy_static = "1.2.0"
rustc-hex = "1.0"
