[package]
name = "pricer"
version = "0.1.0"
authors = ["fstnetwork <admin@fstk.io>"]

[dependencies]
types = { path = "../types" }
traits = { path = "../traits" }

error-chain = "0.12.0"
ethereum-types = "0.4.0"
futures = "0.1.25"
lazy_static = "1.2.0"
log = "0.4.6"
serde = "1.0.82"
serde_derive = "1.0.82"
