[package]
name = "types"
version = "0.1.0"
authors = ["fstnetwork <admin@fstk.io>"]

[dependencies]
ethkey = { git = "https://github.com/paritytech/parity-ethereum.git" }
ethcore-transaction = { git = "https://github.com/paritytech/parity-ethereum.git" }

serde = "1.0.82"
serde_json = "1.0.33"
serde_derive = "1.0.82"
log = "0.4.6"
bytes = "0.4.11"
rustc-hex = "1.0"
hex-slice = "0.1.4"
ethereum-types = "0.4.0"
keccak-hash = "0.1.2"
byteorder = "1.2.7"
error-chain = "0.12.0"
